--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ ext {
 
 configure(allprojects) { project ->
 	repositories {
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
 		mavenCentral()
 		maven {
 			url "https://repo.spring.io/milestone"
